# AI-real-estate-agent

./: .gitignore  README.md  vercel.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/database/: password  supabase_logger.py
backend/app/llm/: feature_extractor_stage1.py  intent_classifier.py  price_interpreter_stage2.py
backend/app/ml/: price_predictor.py
backend/app/routes/: insights_route.py  prediction_route.py
backend/app/schemas/: api_response_schema.py  house_features_schema.py
backend/saved_model/: trained_house_price_model.pkl  training_statistics.json
frontend/: index.html
model_training_notebook/: AI_REAL_ESTATE_AGENT.ipynb
